# oarepo-records-resources

./: .gitignore  README.md  run_tests.sh  setup.cfg
.github/workflows/: main.yml
oarepo_records_resources/services/: expandable_fields.py
tests/: conftest.py  model_document.yaml  model_document_no_expandable_fields.yaml  model_document_picture.yaml  model_file.yaml  model_picture.yaml  test_models.py
