[metadata]
name = oarepo-records-resources
version = 1.0.0
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder>=1.0.0.dev38
    #invenio_access>=1.4.4
    #invenio_app>=1.3.4
    #invenio_db>=1.0.14
    #invenio_pidstore>=1.2.3
    invenio_records>=1.7.4,<2.0.0
    #invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.20.1
packages = find:

[options.extras_require]
tests =
    #pytest-black>=0.3.0,<0.3.10
    #oarepo-model-builder>=1.0.0.dev38
    invenio_app>=1.3.4
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    invenio_search[elasticsearch7]>=2.0.0
    #Sphinx>=4.5
    #openpyxl>=3.0.0<4.0.0
    Werkzeug<2.2.0
    Flask-Login>=0.6.1
    #pyyaml>=6.0

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

